--- a/_posts/2019-02-21-打败拖延症.md
+++ b/_posts/2019-02-21-打败拖延症.md
@@ -13,14 +13,14 @@ tags: [legacy, 拖延症, 自律]
 
 那些会让人产生厌恶的任务通常：
 
-* 很无聊
-* 会给人造成挫败感
-* 非常困难
-* 对个人缺乏意义且不具备内在报酬
-* 本身模糊不清(你不知道该怎么做)
-* 没有结构性
+- 很无聊
+- 会给人造成挫败感
+- 非常困难
+- 对个人缺乏意义且不具备内在报酬
+- 本身模糊不清(你不知道该怎么做)
+- 没有结构性
 
-你对某一项任务的情绪越消极，你就越有可能选择拖延；而且按照Pychyl的观点，“上述任一特点都可以导致这种结果”。
+你对某一项任务的情绪越消极，你就越有可能选择拖延；而且按照 Pychyl 的观点，“上述任一特点都可以导致这种结果”。
 
 ## 了解自己，克服拖延心理
 
@@ -28,11 +28,11 @@ tags: [legacy, 拖延症, 自律]
 
 因此，我们“应该列出自己一般会用什么话或做什么事来为自己的拖延行为开脱”，然后利用它们来警醒自己谨记用不同的思维方式去回应自身的行为。下面是一些常见的拖延借口：
 
-* 分散注意力，去想一些别的东西
-* 有意无意地忘记掉任务
-* 淡化任务的重要性
-* 拒绝承担责任，将自己与任务相剥离
-* 寻找能够合理化自己拖延行为的新信息 (比如，你会告诉自己，我需要更多的信息才能开始做这件事)
+- 分散注意力，去想一些别的东西
+- 有意无意地忘记掉任务
+- 淡化任务的重要性
+- 拒绝承担责任，将自己与任务相剥离
+- 寻找能够合理化自己拖延行为的新信息 (比如，你会告诉自己，我需要更多的信息才能开始做这件事)
 
 ## 限制自己，控制完成的时间
 
@@ -44,7 +44,7 @@ tags: [legacy, 拖延症, 自律]
 
 通常，人们总是高估了自己做某事所需要的动力。
 
-如果你打算去锻炼，那实际上你并不需要拥有整整一个小时的动力来驱使自己完成所有运动；你需要的不过是10分钟的干劲，让你足以收拾好行头并驱车前往体育馆。而一旦你到了体育馆，你自然而然就会完成锻炼。如果你打算要打扫地下室，那你也并不需要一整个下午都不断给自己鼓劲；你需要的不过就是花上五分钟让自己能够摆脱上一件事的影响，迅速进入新的状态。
+如果你打算去锻炼，那实际上你并不需要拥有整整一个小时的动力来驱使自己完成所有运动；你需要的不过是 10 分钟的干劲，让你足以收拾好行头并驱车前往体育馆。而一旦你到了体育馆，你自然而然就会完成锻炼。如果你打算要打扫地下室，那你也并不需要一整个下午都不断给自己鼓劲；你需要的不过就是花上五分钟让自己能够摆脱上一件事的影响，迅速进入新的状态。
 
 所以最简单的建议之一，就是只要开始做就对了。一旦我们着手开始做某件事了，我们一般都会发现，它并没有我们想的那么糟。
 
@@ -63,4 +63,3 @@ tags: [legacy, 拖延症, 自律]
 以写论文为例，现在，你的终极目标是写一篇完整的论文。那咱们倒退一步，想想看，论文有哪些部分呢？至少得包括：摘要，正文和参考文献吧。那完成这三个部分，必备条件是什么呢？是的，得有资料。资料够了，才知道正文怎么写，参考文献该怎么编。那么搜集资料有哪些途径呢？可以有万方数据库，中国知网等渠道。到这一步，就具有了足够的可操作性，你就可以开动了，你可去上网，你可以去查询。总之，都是非常具体的东西。
 
 运用逆向规划的方法，我们把目标逐步拆解。从刚开始要写一篇完整的论文，到最后只需要去数据库找东西。是不是一下子就清晰了很多呢？
-
