--- a/_posts/2019-04-03-此心安处是吾乡.md
+++ b/_posts/2019-04-03-此心安处是吾乡.md
@@ -7,21 +7,21 @@ tags: [legacy]
 
 不知不觉来日本已经有两周的时间了，有时候一直在思考自己来日本的选择是不是正确。之前在网上看到一段话印象很深刻，你在二三十岁左右所做的决定，出国留学也好，工作选择也罢，在当时看来可能只是像每天早餐的豆浆油条一样平常，可是当你几十年后回顾这一切时，就会发现这个选择所导致的可能是人生的一场剧变。
 
-当时记得自己在准备GRE考试时，脑海中就不断想到毛泽东离开家乡外出求学时的那首诗：
+当时记得自己在准备 GRE 考试时，脑海中就不断想到毛泽东离开家乡外出求学时的那首诗：
 
 > 男儿立志出相关，
-> 
+>
 > 学不成名誓不还。
-> 
+>
 > 埋骨何须桑梓地，
-> 
+>
 > 人生无处不青山。
 
-这首诗在我挣扎于GRE单词苦海时简直成为了我的精神支柱，给了我莫大的精神安慰。虽然最后因为种种原因没有选择赴美读博，但是在某种程度上也坚定了我想要离开上海这个地方的决心。刚到日本这段时间，看到国内们朋友的生活，有时候还会悄悄在内心质疑一下自己当初的选择，后面慢慢稳定下来，也渐渐明白了自己为什么能有那么大的勇气独自一人来到异国他乡生活，以及这种勇气的来源是在哪里。
+这首诗在我挣扎于 GRE 单词苦海时简直成为了我的精神支柱，给了我莫大的精神安慰。虽然最后因为种种原因没有选择赴美读博，但是在某种程度上也坚定了我想要离开上海这个地方的决心。刚到日本这段时间，看到国内们朋友的生活，有时候还会悄悄在内心质疑一下自己当初的选择，后面慢慢稳定下来，也渐渐明白了自己为什么能有那么大的勇气独自一人来到异国他乡生活，以及这种勇气的来源是在哪里。
 
 ## 一 work and life balance
 
-胡适在1932年的演讲中赠给刚毕业的大学生三条防身药方，第一条是“总得时时寻一个两个值得研究的问题”，第二条是“总得多发展一点业余的兴趣”，第三条是“总的有一点信心”。
+胡适在 1932 年的演讲中赠给刚毕业的大学生三条防身药方，第一条是“总得时时寻一个两个值得研究的问题”，第二条是“总得多发展一点业余的兴趣”，第三条是“总的有一点信心”。
 
 第二条中的兴趣在我看来即是寻求工作与生活的平衡。工作固然重要，但是它并不是生活的全部。以我之前在上海生活的经验来看，在这样竞争激烈的地方，很难阻止工作侵占自己的私人时间，保持生活与工作的平衡很难，更不要说上海这么高的房价，想一想就觉得身上背负着沉重的压力。而我所以往的生活，是在工作之外可以建立自己的私人空间，并且不受阻碍地发展自己的兴趣爱好，读书也好，艺术也好，就算是一无所用的知识，也可以放心大胆并且无所顾虑地去钻研。而不是每天谈论着房价与股市，一方面幻想着升官发财，一方面又被现实琐事所拖累。我觉得这是我所能预见的自己在上海所拥有的生活，而这显然不是我所想要拥有的。
 
@@ -55,8 +55,7 @@ tags: [legacy]
 
 逃离产生距离，距离产生自由，而自由是最可贵的。
 
-四 吾心安处，便是故乡
----
+## 四 吾心安处，便是故乡
 
 同样是飘洋过海，苏轼为荒无人烟的海南岛写下如是诗句。
 
@@ -66,6 +65,6 @@ tags: [legacy]
 
 在每天往返公司的路上，总会在等红灯的时候听到远处传来布谷鸟的叫声，闭上眼睛，彷佛又回到小时候躺在老家客厅床上的时光。爷爷坐在院子里的树下，拿着一把自己编织的蒲扇乘凉，奶奶躺在里屋休息，客厅里风扇呼哧呼哧的转着，窗外不时传来布谷鸟的叫声，和现在听到的别无二致。
 
-这叫声深邃而悠远，那时候像是催眠的咒语，给了我一个悠长的梦，现在却又像是爷爷手中的蒲扇，抚慰着远方的游子。爷爷走了已经快4年了，每次听到布谷鸟的叫声，我都觉得他好像还在我身边，从未走远。
+这叫声深邃而悠远，那时候像是催眠的咒语，给了我一个悠长的梦，现在却又像是爷爷手中的蒲扇，抚慰着远方的游子。爷爷走了已经快 4 年了，每次听到布谷鸟的叫声，我都觉得他好像还在我身边，从未走远。
 
 就算此时身处异国他乡，却在心理上真真切切地产生一种家园的熟悉感，让我心安。
