--- a/_posts/2021-07-11-何谓有价值的人生？苏格拉底哲学思想解析.md
+++ b/_posts/2021-07-11-何谓有价值的人生？苏格拉底哲学思想解析.md
@@ -5,15 +5,15 @@ categories: [life]
 tags: [legacy, philosophy, 超级歪, 苏格拉底]
 ---
 
-内容整理自Youtube频道《超級歪 SuperY》相关内容。
+内容整理自 Youtube 频道《超級歪 SuperY》相关内容。
 
 ### 苏格拉底的时代
 
-苏格拉底出于生公元前470年，他成长的年代正好是雅典由盛转衰的时候，小时候看着雅典人打波希战争，三次战胜波斯帝国，但到了40岁时自己参与了伯罗奔尼撒战争，却亲眼目睹雅典败给了斯巴达。
+苏格拉底出于生公元前 470 年，他成长的年代正好是雅典由盛转衰的时候，小时候看着雅典人打波希战争，三次战胜波斯帝国，但到了 40 岁时自己参与了伯罗奔尼撒战争，却亲眼目睹雅典败给了斯巴达。
 
 当时雅典城邦没落，社会上的年轻人开始质疑社会现况，质疑什么叫做爱国？雅典的民主是最好的制度吗？在年轻人彷徨无助、想要知道真理的时候，有一群号称自己是知识专家的人出现，专门教导“说话的艺术”也就是修辞学，借机收学费大赚一笔。这些人被称作智者派，有点像我们今天的成功学大师、品牌行销讲师，到处教人如何说服别人、获得成功。
 
-因为雅典是直接民主的社会，每个公民都要有为自己辩护的能力，而且如果想从政，就要知道如何在演说时讲人们想听的话，所以智者派在当时雅典非常热门。他们最常用来讲赢别人的话术就是“相对主义”跟“怀疑主义”，例如有位智者叫Protagoras，他说“人是万物的尺度”，当人生病的时候感官感觉会变不敏锐，吃东西会变得食之无味，等到恢复健康的时候食物的味道又会变好，但你不能说病人的感觉是错的，病人的感觉对病人来说是完全真实的，人永远只能从自己的观点看世界，如果再往上推到社会文化的层次，就变成每个文化都可以有自己的道德价值标准，所有真理都是相对的没有谁对谁错；还有一位智者叫做Gorgias，他说“即便人可以认识世界，这种知识也无法与别人沟通”，像是你的眼睛可以看到红色，但你要怎么跟别人沟通你看到的红色？你必然是用声音传到别人的耳朵里，但是人怎么可能靠听觉来理解视觉呢？你不可能用耳朵来看到红色，所以用语言传递存在经验本身就不可靠，所有真理都是可以怀疑的。
+因为雅典是直接民主的社会，每个公民都要有为自己辩护的能力，而且如果想从政，就要知道如何在演说时讲人们想听的话，所以智者派在当时雅典非常热门。他们最常用来讲赢别人的话术就是“相对主义”跟“怀疑主义”，例如有位智者叫 Protagoras，他说“人是万物的尺度”，当人生病的时候感官感觉会变不敏锐，吃东西会变得食之无味，等到恢复健康的时候食物的味道又会变好，但你不能说病人的感觉是错的，病人的感觉对病人来说是完全真实的，人永远只能从自己的观点看世界，如果再往上推到社会文化的层次，就变成每个文化都可以有自己的道德价值标准，所有真理都是相对的没有谁对谁错；还有一位智者叫做 Gorgias，他说“即便人可以认识世界，这种知识也无法与别人沟通”，像是你的眼睛可以看到红色，但你要怎么跟别人沟通你看到的红色？你必然是用声音传到别人的耳朵里，但是人怎么可能靠听觉来理解视觉呢？你不可能用耳朵来看到红色，所以用语言传递存在经验本身就不可靠，所有真理都是可以怀疑的。
 
 这种相对主义跟怀疑主义的思潮就是苏格拉底要对抗的，因为哲学要追求的真理一定具有普遍性，也就是不会受限于个体、历史、文化，但现在这些智者却把自己假扮成掌握真理的专家，实际上只会打嘴炮，所以苏格拉底决定进到人群里跟年轻人对话，为雅典公民提出了一套全新的求知方法。
 
@@ -57,7 +57,7 @@ tags: [legacy, philosophy, 超级歪, 苏格拉底]
 
 相比之下，智者派就像是一群假装有怀孕的人，假装自己怀有知识还把知识当成商品在贩售，仿佛知识可以从有知的人传递给无知的人。但苏格拉底认为正好相反，哲学家不是真理的拥有者，而是引导者、启发者，先从对方认可的前提下手，再不断质疑、反问来揭露对方的无知，这样反而能够帮助对方，因为只有在我们感觉困惑时，才会有追求真理的冲动，让真理有机会在对话过程中显现，最终每个人都会在自身中发现知识，变成不一样的人。所以跟苏格拉底对话过的人，就不会再用过往的方式思考世界。
 
-以往雅典人讨论事情时常常是诉诸神话的力量，动不动就搬出荷马史诗、奥林帕斯诸神来为自己辩护，或是用智者派教的修辞话术来驳倒别人。但现在苏格拉底诉诸的是理性的力量，用日常语言就可以追求真理，不需要神话或是修辞。而且追求真理不是一个人的事，真理出现的前提需要两个人用理性对话，对话Dialogue的字源就是在两个logos之间，在两个理性之间辩证，所以**在苏格拉底之后，辩证理性取代了神话，Logos取代了Mythos，正式为西方思想开启了哲学的时代。**
+以往雅典人讨论事情时常常是诉诸神话的力量，动不动就搬出荷马史诗、奥林帕斯诸神来为自己辩护，或是用智者派教的修辞话术来驳倒别人。但现在苏格拉底诉诸的是理性的力量，用日常语言就可以追求真理，不需要神话或是修辞。而且追求真理不是一个人的事，真理出现的前提需要两个人用理性对话，对话 Dialogue 的字源就是在两个 logos 之间，在两个理性之间辩证，所以**在苏格拉底之后，辩证理性取代了神话，Logos 取代了 Mythos，正式为西方思想开启了哲学的时代。**
 
 ### 人该如何生活
 
@@ -71,21 +71,21 @@ tags: [legacy, philosophy, 超级歪, 苏格拉底]
 
 ### 审判苏格拉底
 
-现在让我们总结一下苏格拉底生前在做的事情，雅典人认为他们活在一个民主国家，每个人都有言论自由、用修辞学说服别人，苏格拉底却跳出来质疑人们生活中常用的概念，而这样的质疑不止是一种哲学思考，因为苏格拉底真正的目的是告诉年轻人，你们不假思索地就认为你们应该这样生活，但你们的生活方式根本活错了。这造成当时的雅典人对苏格拉底非常不满，认为苏格拉底就跟智者派没两样只会到处怀疑，而且他又喜欢挑战权威揭露别人思想中前后矛盾的地方，所以权威人士也对他很不满，再加上苏格拉底又长得丑，而在古希腊，长得丑本身就是一种错误，古希腊人不只歧视丑人，每年还会把最丑的人抓去献祭，还有最严重的是，苏格拉底的学生Critias受他启发后对民主产生怀疑，组成“三十人僭主集团”夺权，导致雅典的民主政体被推翻了一段时间，所以雅典人发现苏格拉底太危险了，就在公元前399年对他发起了一场审判，罪名是：**“苏格拉底对城邦的神不敬(asebeia)，引入其他的神又腐化青年”**，因为受审时柏拉图也在场，就把整个过程写在他的对话录《辩护篇》里。
+现在让我们总结一下苏格拉底生前在做的事情，雅典人认为他们活在一个民主国家，每个人都有言论自由、用修辞学说服别人，苏格拉底却跳出来质疑人们生活中常用的概念，而这样的质疑不止是一种哲学思考，因为苏格拉底真正的目的是告诉年轻人，你们不假思索地就认为你们应该这样生活，但你们的生活方式根本活错了。这造成当时的雅典人对苏格拉底非常不满，认为苏格拉底就跟智者派没两样只会到处怀疑，而且他又喜欢挑战权威揭露别人思想中前后矛盾的地方，所以权威人士也对他很不满，再加上苏格拉底又长得丑，而在古希腊，长得丑本身就是一种错误，古希腊人不只歧视丑人，每年还会把最丑的人抓去献祭，还有最严重的是，苏格拉底的学生 Critias 受他启发后对民主产生怀疑，组成“三十人僭主集团”夺权，导致雅典的民主政体被推翻了一段时间，所以雅典人发现苏格拉底太危险了，就在公元前 399 年对他发起了一场审判，罪名是：**“苏格拉底对城邦的神不敬(asebeia)，引入其他的神又腐化青年”**，因为受审时柏拉图也在场，就把整个过程写在他的对话录《辩护篇》里。
 
 整场审判可以分成三个阶段。
 
 首先，苏格拉底要澄清雅典人对他的长期偏见，因为这些偏见会影响陪审团的决定，所以苏格拉底讲了一个故事：他的朋友到德尔菲的阿波罗神庙求神谕，神谕说：全雅典没人比苏格拉底更有智慧。苏格拉底非常惊讶，我怎么可能是最有智慧的？所以就决定跑去问那些号称有智慧的专家。跑去问政治家，&nbsp;发现他们并不知道如何带领城邦、人民；跑去问诗人，诗人说他们不知道自己写了什么，只是灵感来就创作；跑去问手工艺者，发现他们本业干得好，就以为自己什么都懂，但是在专业以外的事情都很无知。原本智慧是指人对专门技艺的掌握，像是政治家有治国的智慧、鞋匠有造鞋的智慧，但苏格拉底却发现，有些专家是对自己的内行无知，有些专家则是对自己的外行无知，只有他愿意承认：**我唯一知道的事情，就是我什么也不知道。**这句话不是说苏格拉底真的什么都不知道，而是说他不会声称自己拥有明明就没有的专门知识，像是回答什么是德性、正义、勇敢。他可以用道德直觉判断对方说的对或错，但他不知道他为什么有这种直觉，所以苏格拉底的智慧就在于“知道自己知识的匮乏”。只有知道自己理性的极限，才是具有真正的智慧，苏格拉底到处质疑雅典人的结果，反而是证明了神是对的，雅典人都很无知，但只有苏格拉底知道自己无知，而这件事情，苏格拉底发现只有神知道，所以跟神的智慧相比，人的智慧微不足道(只有苏格拉底有)。但神为什么要派一个人，到人群中告诉他们自己其实没有智慧？有一种解释是，因为“知识会导向德性”，&nbsp;所以“自我认识”跟“灵魂向善”有关，也就是说，神想要每个人完善自己的灵魂，而苏格拉底是阿波罗神的一个媒介，所以他其实已经用行动证明了他相信雅典的神，而雅典人竟然还告他不信神？
 
-所以接下来，苏格拉底就要开始为自己辩护，反驳原告Meletus提出的罪状，第一个是宗教理由：指控苏格拉底是无神论，而且还引进异端。什么异端呢？苏格拉底说自己从小就听得到一种守护灵的声音，每次他想要做某些事的时候，这个声音就会出来制止他，尤其会禁止他从事公共政治活动，甚至还会用托梦的方式来告诫他，奇怪的是审判时这个声音却没有出现。那么这个守护灵的声音到底是什么呢？有些学者认为这是阿波罗神的天启，有些学者认为这其实就是道德良知，哲学家黑格尔则认为，这是被苏格拉底的意识系统外化的无意识声音。不管这个声音是什么，重点是雅典人认为苏格拉底用它来取代奥林匹斯诸神。苏格拉底的反驳是，你第一个指控说我是无神论，第二个指控又说我引入异端的神，但如果我是无神论者，又要如何引入新的神？所以两个指控根本自相矛盾。
+所以接下来，苏格拉底就要开始为自己辩护，反驳原告 Meletus 提出的罪状，第一个是宗教理由：指控苏格拉底是无神论，而且还引进异端。什么异端呢？苏格拉底说自己从小就听得到一种守护灵的声音，每次他想要做某些事的时候，这个声音就会出来制止他，尤其会禁止他从事公共政治活动，甚至还会用托梦的方式来告诫他，奇怪的是审判时这个声音却没有出现。那么这个守护灵的声音到底是什么呢？有些学者认为这是阿波罗神的天启，有些学者认为这其实就是道德良知，哲学家黑格尔则认为，这是被苏格拉底的意识系统外化的无意识声音。不管这个声音是什么，重点是雅典人认为苏格拉底用它来取代奥林匹斯诸神。苏格拉底的反驳是，你第一个指控说我是无神论，第二个指控又说我引入异端的神，但如果我是无神论者，又要如何引入新的神？所以两个指控根本自相矛盾。
 
-接着苏格拉底再继续反驳第三条指控“腐化青年”，苏格拉底问Meletus，既然你认为我对年轻人有害，显然代表你知道谁才是对年轻人更有益的，否则你是否真的关心年轻人就很令人怀疑。结果Meletus哑口无言，赶紧辩解说，全雅典公民都在教育年轻人、让他们变好，只有你在腐化他们。苏格拉底反驳说：如果全部公民都让年轻人变好，那年轻人现在不是每个都很有德性，每个都幸福极了吗？但事实上并没有，我并没有带坏年轻人，而是遵从阿波罗神的使命：让世人知道自己的无知。这才能带给城邦最大的利益。苏格拉底比喻，我就像一只飞虫想要给懒惰的马一点刺激，没想到马被刺激之后不懂得感激还想要打死这只飞虫。
+接着苏格拉底再继续反驳第三条指控“腐化青年”，苏格拉底问 Meletus，既然你认为我对年轻人有害，显然代表你知道谁才是对年轻人更有益的，否则你是否真的关心年轻人就很令人怀疑。结果 Meletus 哑口无言，赶紧辩解说，全雅典公民都在教育年轻人、让他们变好，只有你在腐化他们。苏格拉底反驳说：如果全部公民都让年轻人变好，那年轻人现在不是每个都很有德性，每个都幸福极了吗？但事实上并没有，我并没有带坏年轻人，而是遵从阿波罗神的使命：让世人知道自己的无知。这才能带给城邦最大的利益。苏格拉底比喻，我就像一只飞虫想要给懒惰的马一点刺激，没想到马被刺激之后不懂得感激还想要打死这只飞虫。
 
-苏格拉底的辩护到此结束。陪审团投票，认为有罪的280票，无罪的220票，所以第一轮审判结果是苏格拉底有罪。
+苏格拉底的辩护到此结束。陪审团投票，认为有罪的 280 票，无罪的 220 票，所以第一轮审判结果是苏格拉底有罪。
 
-接下来要进行第二轮审判，就是要判什么刑，有人提议死刑，有人提议逐出雅典，以后最好让他都闭嘴，苏格拉底回应说：**未知的审视的人生不值得活**，我不能闭嘴。有人听到可能会说：苏格拉底凭什么管我怎么生活？又不是每个人都要当哲学家，我就喜欢每天耍废不行吗？像是自由主义哲学家John Mill就说，你可以自由选择，要做一个痛苦的苏格拉底，还是做一只快乐的猪。但是苏格拉底真正想跟雅典人说的是，你必须改变你的生活，因为更值得活的人生是可能的，从社会强加给你的那些理所当然的价值观中解放，反省对自己真正最好的是什么，你就会发现，最好的生活是追求真理跟德性，因为这两者是实现幸福的必要条件，而没有人不渴望幸福的生活，所以苏格拉底认为自己是在帮雅典人实现幸福人生，因此他的刑罚应该是宣布他是公众的恩人，以后可以在市政厅免费吃三餐。
+接下来要进行第二轮审判，就是要判什么刑，有人提议死刑，有人提议逐出雅典，以后最好让他都闭嘴，苏格拉底回应说：**未知的审视的人生不值得活**，我不能闭嘴。有人听到可能会说：苏格拉底凭什么管我怎么生活？又不是每个人都要当哲学家，我就喜欢每天耍废不行吗？像是自由主义哲学家 John Mill 就说，你可以自由选择，要做一个痛苦的苏格拉底，还是做一只快乐的猪。但是苏格拉底真正想跟雅典人说的是，你必须改变你的生活，因为更值得活的人生是可能的，从社会强加给你的那些理所当然的价值观中解放，反省对自己真正最好的是什么，你就会发现，最好的生活是追求真理跟德性，因为这两者是实现幸福的必要条件，而没有人不渴望幸福的生活，所以苏格拉底认为自己是在帮雅典人实现幸福人生，因此他的刑罚应该是宣布他是公众的恩人，以后可以在市政厅免费吃三餐。
 
-听完后陪审团整个傻眼，连原本投苏格拉底无罪的人，都有80个人跳出来支持苏格拉底死刑，所以苏格拉底被定罪必须喝下毒酒赴死。
+听完后陪审团整个傻眼，连原本投苏格拉底无罪的人，都有 80 个人跳出来支持苏格拉底死刑，所以苏格拉底被定罪必须喝下毒酒赴死。
 
 ### 苏格拉底之死
 
@@ -95,7 +95,7 @@ tags: [legacy, philosophy, 超级歪, 苏格拉底]
 
 > 苏格拉底说，已经错过最佳逃跑时机了，原本我可以合法选择被放逐，但现在已经被判死刑，如果逃狱就是犯法，反而真的成了别人口中腐化青年的罪犯，但为什么要守法呢？因为如果没有雅典法律，我父母就不能合法结婚，没有我父母结婚就不可能有我存在，所以我生命的立足点就是法律。
 >
-> 而且这时候的苏格拉底已经70岁了，逃到异乡被别国人当逃犯很难生活。最重要的是，苏格拉底要实践自己的教导。
+> 而且这时候的苏格拉底已经 70 岁了，逃到异乡被别国人当逃犯很难生活。最重要的是，苏格拉底要实践自己的教导。
 >
 > 他的学生在监狱里问他：你不怕死吗？
 >
@@ -103,15 +103,15 @@ tags: [legacy, philosophy, 超级歪, 苏格拉底]
 >
 > 学生：？？？
 
-所以苏格拉底不需要逃狱，因为他的灵魂很快就可以出狱了，最后苏格拉底要喝下毒酒时，他跟学生说了一句遗言：“记得帮我还给Asclepius神一只鸡。”
+所以苏格拉底不需要逃狱，因为他的灵魂很快就可以出狱了，最后苏格拉底要喝下毒酒时，他跟学生说了一句遗言：“记得帮我还给 Asclepius 神一只鸡。”
 
-这是什么意思呢？尼采认为，Asclepius是古希腊的药神，生病的人会送给药神一只鸡，保佑身体康复。所以对苏格拉底来说，如果死亡是从疾病中痊愈，那不就代表，人活着本身就是一场病？苏格拉底的态度其实呼应了他自己的理论，“知识即是德性”，当我“知道”死亡并不可怕，而是会带来幸福时，我就有面对死亡的勇气，因为勇气就是源自“知道”什么是不该惧怕的，仿佛苏格拉底用自己的死来告诉他的学生什么是真正的勇气。
+这是什么意思呢？尼采认为，Asclepius 是古希腊的药神，生病的人会送给药神一只鸡，保佑身体康复。所以对苏格拉底来说，如果死亡是从疾病中痊愈，那不就代表，人活着本身就是一场病？苏格拉底的态度其实呼应了他自己的理论，“知识即是德性”，当我“知道”死亡并不可怕，而是会带来幸福时，我就有面对死亡的勇气，因为勇气就是源自“知道”什么是不该惧怕的，仿佛苏格拉底用自己的死来告诉他的学生什么是真正的勇气。
 
 ### 苏格拉底之后
 
 苏格拉底作为西方第一位大哲学家，死后更是启发了无数的西方思潮，柏拉图说：我这一生最幸运的事，第一个是我生为雅典人，而不是蛮族，第二是我生为自由人，而不是奴隶，第三是我生为男人，而不是女人，但最幸运的是，我生在苏格拉底的时代。
 
-直到罗马帝国时期，早期的基督教神学家Justin Martyr跟Origenof Alexandria，都会把苏格拉底之死跟耶稣受难一起比较，两者都是一个人影响群众对抗多神教，都被国家指控不信神，引进异端神明。
+直到罗马帝国时期，早期的基督教神学家 Justin Martyr 跟 Origenof Alexandria，都会把苏格拉底之死跟耶稣受难一起比较，两者都是一个人影响群众对抗多神教，都被国家指控不信神，引进异端神明。
 
 而在近代也有许多哲学家非常看重苏格拉底，像是黑格尔就认为，苏格拉底出现以前的雅典人，都是遵照上一代的道德要求在生活，苏格拉底出现后，人应该如何生活变成了一个必须反思的问题，而苏格拉底诉诸的是一个高于集体道德感的权威：自己内在的声音。当客观的集体道德跟主观的个人良知产生冲突时，苏格拉底选择了后者。这也反映了人类精神的发展阶段，就是国家跟个人之间的关系还没有成熟到能够成为一体，所以苏格拉底的死虽然是两种道德冲突下的悲剧，却是整个世界精神要向上提升的必要辩证过程。
 
