--- a/_posts/2025-02-05-如何写好一篇博客.md
+++ b/_posts/2025-02-05-如何写好一篇博客.md
@@ -7,7 +7,7 @@ tags: [blog]
 
 ## front matter
 
-典型的front matter如下所示：
+典型的 front matter 如下所示：
 
 ```
 ---
@@ -21,7 +21,7 @@ pin: true # optional
 ```
 
 - 日期：可以设置精确到秒的时间戳和时区，一般制定到日期即可。
-- 分类和标签：均支持中文，不同分类和标签用逗号分隔，分类最大支持2级，标签数量无限制。
+- 分类和标签：均支持中文，不同分类和标签用逗号分隔，分类最大支持 2 级，标签数量无限制。
 - 描述：默认情况下，文章的最前面内容将作为文章的描述信息，也可以在这里手动设置描述信息的内容，非必须。
 
 ## 分类和标签的使用规范
@@ -30,6 +30,7 @@ pin: true # optional
 - 标签：用于描述文章涉及的具体内容、细节和关键词，没有严格的层级关系。可以根据文章内容灵活添加，既可以用于描述文章的细节，也能弥补分类无法覆盖的内容角度。每篇文章可以附加多个标签。
 
 考虑自己的兴趣，选择以下几个方向作为主要分类。
+
 1. AI: 和人工智能相关的话题和研究，后期可以再进一步细分。
 2. SDE: 软件开发，编程技术相关内容
 3. car: 自动驾驶，车辆软件开发与车辆工程相关内容。
@@ -45,25 +46,25 @@ pin: true # optional
 
 参考少数派的[风格指南](https://manual.sspai.com/rules/style/)。
 
-## markdown语法注意点
+## markdown 语法注意点
 
-不要添加1级标题，从2级标题开始分级，这样TOC导航才能正常显示。
+不要添加 1 级标题，从 2 级标题开始分级，这样 TOC 导航才能正常显示。
 
 ### 提示语
 
-chirpy主题支持以下4种提示语：
+chirpy 主题支持以下 4 种提示语：
 
 > this is an info prompt.
-{: .prompt-info }
+> {: .prompt-info }
 
 > this is an warning prompt.
-{: .prompt-warning }
+> {: .prompt-warning }
 
 > this is an tip prompt.
-{: .prompt-tip }
+> {: .prompt-tip }
 
 > this is an danger prompt.
-{: .prompt-danger }
+> {: .prompt-danger }
 
 ### 多媒体
 
@@ -72,6 +73,7 @@ chirpy主题支持以下4种提示语：
 视频插入的格式如下：
 
 {% raw %}
+
 ```liquid
 # youtube, bilibili
 {% include embed/{Platform}.html id='{ID}' %}
@@ -79,4 +81,5 @@ chirpy主题支持以下4种提示语：
 # other platforms
 {% include embed/video.html src='{URL}' %}
 ```
+
 {% endraw %}
