--- a/_posts/2025-02-09-一文看懂日本纳税制度.md
+++ b/_posts/2025-02-09-一文看懂日本纳税制度.md
@@ -5,132 +5,144 @@ categories: [investment]
 tags: [tax, japan, 一文看懂]
 ---
 
-日本主要税种包括三大类：所得税（国税）、住民税（地方税）、消费税。所得税和住民税计算比较复杂，在下面详细展开。消费税为统一税率10%，部分食品和新闻订阅适用8%的轻减税率。
+日本主要税种包括三大类：所得税（国税）、住民税（地方税）、消费税。所得税和住民税计算比较复杂，在下面详细展开。消费税为统一税率 10%，部分食品和新闻订阅适用 8%的轻减税率。
 
 ## 所得税（国税）
-所得税是指从1月1日到12月31日的1年间，个人收入总额的税款。在日本有收入的人都需要自己计算好所得税金额，然后向税务局进行**确定申告**，缴纳所得税（如果是在公司工作情况会有所不同，见下方的源泉所得税介绍）。
 
-目前所得税采用累进税率：根据[国税厅官网](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/2260.htm)，2015年之后所得税按照年收入分为7档，最高税率45%。
+所得税是指从 1 月 1 日到 12 月 31 日的 1 年间，个人收入总额的税款。在日本有收入的人都需要自己计算好所得税金额，然后向税务局进行**确定申告**，缴纳所得税（如果是在公司工作情况会有所不同，见下方的源泉所得税介绍）。
 
-| 課税される所得金額                 | 税率 | 控除額      |
-| ---------------------------------- | ---- | ----------- |
-| 1,000円 から 1,949,000円まで       | 5％  | 0円         |
-| 1,950,000円 から 3,299,000円まで   | 10％ | 97,500円    |
-| 3,300,000円 から 6,949,000円まで   | 20％ | 427,500円   |
-| 6,950,000円 から 8,999,000円まで   | 23％ | 636,000円   |
-| 9,000,000円 から 17,999,000円まで  | 33％ | 1,536,000円 |
-| 18,000,000円 から 39,999,000円まで | 40％ | 2,796,000円 |
-| 40,000,000円 以上                  | 45％ | 4,796,000円 |
+目前所得税采用累进税率：根据[国税厅官网](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/2260.htm)，2015 年之后所得税按照年收入分为 7 档，最高税率 45%。
+
+| 課税される所得金額                   | 税率 | 控除額       |
+| ------------------------------------ | ---- | ------------ |
+| 1,000 円 から 1,949,000 円まで       | 5％  | 0 円         |
+| 1,950,000 円 から 3,299,000 円まで   | 10％ | 97,500 円    |
+| 3,300,000 円 から 6,949,000 円まで   | 20％ | 427,500 円   |
+| 6,950,000 円 から 8,999,000 円まで   | 23％ | 636,000 円   |
+| 9,000,000 円 から 17,999,000 円まで  | 33％ | 1,536,000 円 |
+| 18,000,000 円 から 39,999,000 円まで | 40％ | 2,796,000 円 |
+| 40,000,000 円 以上                   | 45％ | 4,796,000 円 |
 
 > 税額控除前の所得税 = 課税所得 × 所得税率 − 控除額 （1）
-{: .prompt-info }
+> {: .prompt-info }
 
-公式中的控除額是为了快速计算累计税率，以課税所得1000万日元为例，税額控除前需缴纳的所得税为：
+公式中的控除額是为了快速计算累计税率，以課税所得 1000 万日元为例，税額控除前需缴纳的所得税为：
 
-> 10,000,000円 × 0.33 - 1,536,000円 = 1,764,000円
-{: .prompt-tip }
+> 10,000,000 円 × 0.33 - 1,536,000 円 = 1,764,000 円
+> {: .prompt-tip }
 
 对于会社員やパート、アルバイト、派遣社員等**給与所得者**：
 
-> 課税所得 = 年収 − 給与所得控除 − 15种所得控除 （2）
-{: .prompt-info }
+> 課税所得 = 年収 − 給与所得控除 − 15 种所得控除 （2）
+> {: .prompt-info }
 
 - 年収：一年中的工资和奖金的总额，计算时，以**工资的发放日期**为基准，而不是按照**工作所属月份**来确定。
 - [給与所得控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1410.htm)：根据下面的表格进行计算。
-- 15种所得控除：参照下面的详细介绍。
+- 15 种所得控除：参照下面的详细介绍。
 
-| 給与等の収入金額                 | 給与所得控除額            |
-| -------------------------------- | ------------------------- |
-| 1,625,000円まで                  | 550,000円                 |
-| 1,625,001円 から 1,800,000円まで | 収入金額×40％-100,000円   |
-| 1,800,001円 から 3,600,000円まで | 収入金額×30％+80,000円    |
-| 3,600,001円 から 6,600,000円まで | 収入金額×20％+440,000円   |
-| 6,600,001円 から 8,500,000円まで | 収入金額×10％+1,100,000円 |
-| 8,500,001円以上                  | 1,950,000円（上限）       |
+| 給与等の収入金額                   | 給与所得控除額              |
+| ---------------------------------- | --------------------------- |
+| 1,625,000 円まで                   | 550,000 円                  |
+| 1,625,001 円 から 1,800,000 円まで | 収入金額 ×40％-100,000 円   |
+| 1,800,001 円 から 3,600,000 円まで | 収入金額 ×30％+80,000 円    |
+| 3,600,001 円 から 6,600,000 円まで | 収入金額 ×20％+440,000 円   |
+| 6,600,001 円 から 8,500,000 円まで | 収入金額 ×10％+1,100,000 円 |
+| 8,500,001 円以上                   | 1,950,000 円（上限）        |
 
 对于不需要缴纳所得税的津贴，无需计入收入总额。例如，与工资一同发放的、符合规定金额以内的通勤津贴、一定金额以下的夜班或值班津贴、出差旅费等，都属于免税范围。
 
 ### 源泉所得税和所得税的区别
+
 - 所得税：纳税人本人亲自向国家缴纳的所得税。
 - 源泉所得税：公司预先从工资、奖金等收入中扣除一定金额，并代替**給与所得者**向国家缴纳的所得税。
 
-由于所得税是基于个人年度收入总额计算的税款，因此，在12月结束、全年收入确定之前，无法得知确切的所得税金额。然而，**給与所得者**每月都会领取工资，全年大致的所得税金额是可以预估的，因此也可以计算出个人的预估所得税金额。为了确保能够准确地征收所得税，与其让每个人各自计算并申报税款，不如由支付工资的公司统一计算并代扣代缴所有人的所得税，这样更为高效。
+由于所得税是基于个人年度收入总额计算的税款，因此，在 12 月结束、全年收入确定之前，无法得知确切的所得税金额。然而，**給与所得者**每月都会领取工资，全年大致的所得税金额是可以预估的，因此也可以计算出个人的预估所得税金额。为了确保能够准确地征收所得税，与其让每个人各自计算并申报税款，不如由支付工资的公司统一计算并代扣代缴所有人的所得税，这样更为高效。
 
-在实际的所得税计算过程中，会综合考虑年度总收入、**15种所得控除**、**税额控除**等因素，最终确定应纳税额。而源泉所得税的计算仅依据当月扣除社会保险费用后的工资金额以及受扶养亲属的数量等因素，仅考虑部分扣除项目。因此，在适用未被源泉所得税计算考虑的所得控除或税额控除后，最终计算出的实际所得税金额可能与已扣缴的源泉所得税金额存在差异。这种差异会通过**年末调整**来进行修正。
+在实际的所得税计算过程中，会综合考虑年度总收入、**15 种所得控除**、**税额控除**等因素，最终确定应纳税额。而源泉所得税的计算仅依据当月扣除社会保险费用后的工资金额以及受扶养亲属的数量等因素，仅考虑部分扣除项目。因此，在适用未被源泉所得税计算考虑的所得控除或税额控除后，最终计算出的实际所得税金额可能与已扣缴的源泉所得税金额存在差异。这种差异会通过**年末调整**来进行修正。
 
-### 15种所得控除
+### 15 种所得控除
 
 #### 1. [基礎控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1199.htm)
-合計所得金額在2,500万円以下时，控除額为48万日元。
 
-根据[2025年税改大纲](https://www.mof.go.jp/tax_policy/tax_reform/outline/fy2025/20241227taikou.pdf)，基础控除额提高到58万日元。
+合計所得金額在 2,500 万円以下时，控除額为 48 万日元。
+
+根据[2025 年税改大纲](https://www.mof.go.jp/tax_policy/tax_reform/outline/fy2025/20241227taikou.pdf)，基础控除额提高到 58 万日元。
 
 #### 2. [配偶者控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1191.htm)
+
 如果纳税人在所得税法上有符合条件的受抚养配偶者，则可以享受一定金额的所得控除。
 
 配偶者控除适用条件：
-1. 纳税人年收入小于**1000万円**
-2. 配偶者年收入小于**48万円**
 
-| 所得金額               | 控除額1️⃣ |
-| ---------------------- | ------- |
-| 900万円以下            | 38万円  |
-| 900万円超950万円以下   | 26万円  |
-| 950万円超1,000万円以下 | 13万円  |
+1. 纳税人年收入小于**1000 万円**
+2. 配偶者年收入小于**48 万円**
 
-1️⃣如果受抚养配偶者年龄大于70岁，控除额会有一定变化。
+| 所得金額                  | 控除額 1️⃣ |
+| ------------------------- | --------- |
+| 900 万円以下              | 38 万円   |
+| 900 万円超 950 万円以下   | 26 万円   |
+| 950 万円超 1,000 万円以下 | 13 万円   |
+
+1️⃣ 如果受抚养配偶者年龄大于 70 岁，控除额会有一定变化。
 
 #### 3. [配偶者特別控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1195.htm)
-在配偶者控除条件的基础上，如果纳税人配偶者的年收入大于48万円，但是小于133万円，则可适用配偶者特別控除，具体金额参照上方的官网链接。
+
+在配偶者控除条件的基础上，如果纳税人配偶者的年收入大于 48 万円，但是小于 133 万円，则可适用配偶者特別控除，具体金额参照上方的官网链接。
 
 #### 4. [扶養控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1180.htm)
+
 如果纳税人在所得税法上有符合条件的受抚养亲属，则可以享受一定金额的所得控除。
 
 扶養親族（同居）适用条件：
+
 1. 配偶者以外的亲属（包括六亲等以内的血亲及三亲等以内的姻亲）
 2. 与纳税人共同生活，即经济上保持同一生计。
-3. 年所得总额不超过48万日元，如果仅有工资收入，则工资收入须在103万日元以下。
+3. 年所得总额不超过 48 万日元，如果仅有工资收入，则工资收入须在 103 万日元以下。
 
 扶養親族（非居住者）适用条件：
-1. 16～30岁、70岁及以上
-2. 30岁到70岁，但满足下列条件
+
+1. 16 ～ 30 岁、70 岁及以上
+2. 30 岁到 70 岁，但满足下列条件
    1. 因留学而不再在日本国内拥有住所或居所
    2. 残疾人
-   3. 从纳税人处获得38万日元以上的生活费或教育费
+   3. 从纳税人处获得 38 万日元以上的生活费或教育费
 
-| 区分                               | 控除額 |
-| ---------------------------------- | ------ |
-| 一般（下列年龄段之外）             | 38万円 |
-| 特定扶養親族（19～23岁）           | 63万円 |
-| 老人（70岁以上）扶養親族（非同居） | 48万円 |
-| 老人（70岁以上）扶養親族（同居）   | 58万円 |
+| 区分                                | 控除額  |
+| ----------------------------------- | ------- |
+| 一般（下列年龄段之外）              | 38 万円 |
+| 特定扶養親族（19 ～ 23 岁）         | 63 万円 |
+| 老人（70 岁以上）扶養親族（非同居） | 48 万円 |
+| 老人（70 岁以上）扶養親族（同居）   | 58 万円 |
 
 #### 5. [医療費控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1120.htm)
-纳税人为自己、配偶者或其他亲属支付了医疗费用，且该医疗费用超过了一定金额，则可以根据下面公式计算所得控除金额（最高限额为200万日元）：
 
-医療費控除金额 = 实际支付的医疗费 - 保险赔付和补助金 - 10万日元
+纳税人为自己、配偶者或其他亲属支付了医疗费用，且该医疗费用超过了一定金额，则可以根据下面公式计算所得控除金额（最高限额为 200 万日元）：
 
-此外，在2017年1月1日至2026年12月31日期间，如果纳税人或其配偶者或其他亲属支付了特定一般用医药品等的购买费用，并且该纳税人在该年度内参与了健康管理或疾病预防（如定期健康检查、疫苗接种等），则可以在通常的医療費控除和**セルフメディケーション税制**之间进行选择。
+医療費控除金额 = 实际支付的医疗费 - 保险赔付和补助金 - 10 万日元
 
-セルフメディケーション控除金额：医药品的购买金额（扣除保险补偿部分）超过12,000日元的部分，最高限额为88,000日元。
+此外，在 2017 年 1 月 1 日至 2026 年 12 月 31 日期间，如果纳税人或其配偶者或其他亲属支付了特定一般用医药品等的购买费用，并且该纳税人在该年度内参与了健康管理或疾病预防（如定期健康检查、疫苗接种等），则可以在通常的医療費控除和**セルフメディケーション税制**之间进行选择。
+
+セルフメディケーション控除金额：医药品的购买金额（扣除保险补偿部分）超过 12,000 日元的部分，最高限额为 88,000 日元。
 
 #### 6. [寄附金控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1150.htm)
+
 如果纳税人向国家、地方公共团体或特定公益增进法人等机构捐赠了特定寄附金，则可以按照下列公式申请所得控除。
 
-> 寄附金控除额 = min(1️⃣, 2️⃣) − 2,000日元
-{: .prompt-info }
+> 寄附金控除额 = min(1️⃣, 2️⃣) − 2,000 日元
+> {: .prompt-info }
 
-1️⃣该年度支付的特定寄附金总额
-2️⃣该年度总所得金额的40%
+1️⃣ 该年度支付的特定寄附金总额
+2️⃣ 该年度总所得金额的 40%
 
 #### 6.1 [ふるさと納税(寄附金控除)](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1155.htm)
+
 ふるさと納税是一项允许纳税人向自己选择的地方自治体捐款，并在**所得税**和**個人住民税**中获得相应控除的制度。
 
-> 1️⃣所得税控除：（ふるさと納税額－2,000円）× 所得税率
+> 1️⃣ 所得税控除：（ふるさと納税額－2,000 円）× 所得税率
 >
-> 2️⃣個人住民税（基本分）：（ふるさと納税額－2,000円）× 10%
+> 2️⃣ 個人住民税（基本分）：（ふるさと納税額－2,000 円）× 10%
 >
-> 3️⃣個人住民税（特例分）：（ふるさと納税額 － 2,000円）× （100％ － 10％（基本分）－ 所得税率）
+> 3️⃣ 個人住民税（特例分）：（ふるさと納税額 － 2,000 円）× （100％ － 10％（基本分）－ 所得税率）
 
 ![ふるさと納税](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/img/1155.png)
 
@@ -138,67 +150,78 @@ tags: [tax, japan, 一文看懂]
 
 ![alt text](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/img/1155-2.png)
 
-ふるさと納税示例：通过[ANAのふるさと納税](https://furusato.ana.co.jp)、[さとふる](https://www.satofull.jp/?utm_source=accesstrade&utm_medium=affiliate&utm_campaign=at_rate_r&atnct=satoful2_0100nn2k0026l0-a9dffebcaf89cb6a7b56c512f35e5a42)捐款10万日元，就能减免98000日元的税，并收到当地发来的谢礼，谢礼的价值一般约为捐款的30%，起到变相节税的效果。
+ふるさと納税示例：通过[ANA のふるさと納税](https://furusato.ana.co.jp)、[さとふる](https://www.satofull.jp/?utm_source=accesstrade&utm_medium=affiliate&utm_campaign=at_rate_r&atnct=satoful2_0100nn2k0026l0-a9dffebcaf89cb6a7b56c512f35e5a42)捐款 10 万日元，就能减免 98000 日元的税，并收到当地发来的谢礼，谢礼的价值一般约为捐款的 30%，起到变相节税的效果。
 
 #### 7. [社会保険料控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1130.htm)
+
 如果纳税人为自己、配偶者或其他亲属支付了社会保険料（国民健康保険、健康保険、国民年金、厚生年金、雇用保険、介護保険等），则可以就支付金额申请所得控除，通过工资扣除或养老金扣除的保险费同样适用。
 
 #### 8. [生命保険料控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1140.htm)
-如果纳税人支付了生命保険料、介護医療保険料或個人年金保険料，则可以申请特定方法计算的所得控除（最大12万円）。
+
+如果纳税人支付了生命保険料、介護医療保険料或個人年金保険料，则可以申请特定方法计算的所得控除（最大 12 万円）。
 
 #### 9. [地震保険料控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1145.htm)
-如果纳税人支付了损害保险合同中涉及地震等灾害损害部分的保险费（掛金），则可以申请最大5万円的所得控除
+
+如果纳税人支付了损害保险合同中涉及地震等灾害损害部分的保险费（掛金），则可以申请最大 5 万円的所得控除
 
 #### 10. [小規模企業共済等掛金控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1135.htm)
+
 如果纳税人支付了根据《小規模企業共済法》规定的共济合同所需的保险费（掛金），则可以申请保险费全额的所得控除。
 
 #### 11. [ひとり親控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1171.htm)
-如果纳税人是单亲家庭，则可以申请35万円的所得控除。
+
+如果纳税人是单亲家庭，则可以申请 35 万円的所得控除。
 
 单亲（ひとり親）的认定条件：
+
 1. 没有事实婚姻关系：纳税人未婚或配偶者生死不明，且不存在事实婚姻关系
-2. 有共同生活的子女，该子女年总所得金额不超过48万日元，且未被其他人申报为配偶或受抚养亲属
-3. 纳税人当年的总所得金额不超过500万日元。
+2. 有共同生活的子女，该子女年总所得金额不超过 48 万日元，且未被其他人申报为配偶或受抚养亲属
+3. 纳税人当年的总所得金额不超过 500 万日元。
 
 #### 12. [寡婦控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1170.htm)
-如果纳税人本人是寡妇，可以获得27万円所得控除。
+
+如果纳税人本人是寡妇，可以获得 27 万円所得控除。
 
 #### 13. [勤労学生控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1175.htm)
-如果纳税人本人是勤労学生，可以获得27万円所得控除。
+
+如果纳税人本人是勤労学生，可以获得 27 万円所得控除。
 
 #### 14. [障害者控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1160.htm)
-如果纳税人本人、配偶者或受抚养亲属符合所得税法规定的残疾人条件，则可以申请一定金额（27万円～75万円）的所得控除。
+
+如果纳税人本人、配偶者或受抚养亲属符合所得税法规定的残疾人条件，则可以申请一定金额（27 万円～ 75 万円）的所得控除。
 
 #### 15. [雑損控除](https://www.nta.go.jp/taxes/shiraberu/taxanswer/shotoku/1110.htm)
+
 如果因灾害、盗窃或侵占导致符合**杂损控除适用资产**条件的资产受损，纳税人可以申请一定金额的所得控除。
 
 ### 年末调整和确定申告
 
-想要享受上述**15种所得控除**，需要在**年末调整**或**个人所得税申报（确定申告）**时进行申报。
+想要享受上述**15 种所得控除**，需要在**年末调整**或**个人所得税申报（确定申告）**时进行申报。
 
-- 年末調整：公司代替员工精算所得税的手续，仅适用于工资所得。但是工资收入超过2000万的需要自己进行确定申告。
+- 年末調整：公司代替员工精算所得税的手续，仅适用于工资所得。但是工资收入超过 2000 万的需要自己进行确定申告。
 - 确定申告：纳税人自行申报全年所得税额，适用于所有所得（包括工资、投资、经营所得等）。
 
 即使公司员工已完成年末调整（年末調整），在以下情况下，仍需要进行个人所得税申报（确定申告）：
+
 1. 首次申请住宅ローン控除：第一年申请住宅ローン控除的纳税人必须进行确定申告。从第二年起，可以直接通过年末调整办理，无需额外申报
 2. 希望申请年末调整无法适用的控除。例如：医療費控除、寄附金控除（不适用时）、雑損控除
 3. 未使用**ふるさと納税ワンストップ特例**的情况下，申请ふるさと納税控除
-4. 副业所得（杂收入）如自由职业、兼职、投资收益等超过20万日元，则必须进行确定申告并申报额外收入
+4. 副业所得（杂收入）如自由职业、兼职、投资收益等超过 20 万日元，则必须进行确定申告并申报额外收入
 
 ### 税額控除和復興所得税
 
 > 应纳所得税 = 所得税 − 税额控除額 + 復興所得税（3）
-{: .prompt-info }
+> {: .prompt-info }
 
 - 税额控除：可以直接从所得税金额中扣除的优惠政策，例如股息控除或[住宅ローン控除](https://www.mlit.go.jp/jutakukentiku/house/jutakukentiku_house_tk2_000017.html)等。
-- 復興所得税：筹措东日本大地震的重建资金，在2013年1月1日至2037年12月31日期间，额外征收的一项特别税。计算方法是：所得税金额 × 2.1%
+- 復興所得税：筹措东日本大地震的重建资金，在 2013 年 1 月 1 日至 2037 年 12 月 31 日期间，额外征收的一项特别税。计算方法是：所得税金额 × 2.1%
 
-住宅ローン控除额：每年年底的住房贷款剩余金额的0.7%，可从所得税（部分可抵扣次年住民税）中扣除，最长可适用13年。
+住宅ローン控除额：每年年底的住房贷款剩余金额的 0.7%，可从所得税（部分可抵扣次年住民税）中扣除，最长可适用 13 年。
 
-以課税所得1000万日元和20万日元的住房贷款控除为例，最终需缴纳的所得税为：
+以課税所得 1000 万日元和 20 万日元的住房贷款控除为例，最终需缴纳的所得税为：
 
-> （1,764,000円 - 200,000円） x 1.021 = 1,596,000円（舍去100日元以下的金额）
-{: .prompt-tip }
+> （1,764,000 円 - 200,000 円） x 1.021 = 1,596,000 円（舍去 100 日元以下的金额）
+> {: .prompt-tip }
 
 ## 住民税（地方税）
 
@@ -206,7 +229,7 @@ tags: [tax, japan, 一文看懂]
 
 住民税由都道府県民税和市町村民税组成，纳税人需要将个人住民税统一缴纳给所在市町村，各市町村会将都道府县民税部分上缴至对应的都道府县。
 
-以[名古屋市](https://www.city.nagoya.jp/kurashi/category/392-4-2-6-0-0-0-0-0-0.html)为例，市民税率为7.7%，県民税率为2%。
+以[名古屋市](https://www.city.nagoya.jp/kurashi/category/392-4-2-6-0-0-0-0-0-0.html)为例，市民税率为 7.7%，県民税率为 2%。
 
 > 市民税 = 課税所得金額（所得金額-所得控除額）×7.7％‐調整控除額-税額控除額
 > 県民税 = 課税所得金額（所得金額-所得控除額）×2％-調整控除額-税額控除額
