--- a/_posts/2025-02-13-一文看懂Git.md
+++ b/_posts/2025-02-13-一文看懂Git.md
@@ -6,18 +6,19 @@ categories: [SWE]
 tags: [Git, 一文看懂]
 ---
 
-Git是由Linux之父Linus Torvalds于2005年开发的分布式版本控制系统。在Git出现之前，Linux内核开发团队一直使用BitKeeper作为版本控制系统。然而，在2005年，BitKeeper的所有者收回了Linux社区免费使用BitKeeper的权利。这促使Linus开发了一个全新的版本控制系统。
+Git 是由 Linux 之父 Linus Torvalds 于 2005 年开发的分布式版本控制系统。在 Git 出现之前，Linux 内核开发团队一直使用 BitKeeper 作为版本控制系统。然而，在 2005 年，BitKeeper 的所有者收回了 Linux 社区免费使用 BitKeeper 的权利。这促使 Linus 开发了一个全新的版本控制系统。
 
-Linus开发Git的主要目标是：
+Linus 开发 Git 的主要目标是：
+
 - 快速
 - 简单的设计
 - 对非线性开发的强力支持（允许上千个并行开发的分支）
 - 完全分布式
-- 能够高效管理类似Linux内核一样的超大规模项目
+- 能够高效管理类似 Linux 内核一样的超大规模项目
 
-## Data Model of Git 
+## Data Model of Git
 
-Git项目由文件夹(tree)和文件(blob)组成：
+Git 项目由文件夹(tree)和文件(blob)组成：
 
 ```
 <root> (tree)
@@ -66,15 +67,15 @@ references = map<string, string>
 git cat-file -p <blob | tree | commit id>
 ```
 
-## 安装和配置Git
+## 安装和配置 Git
 
-MacOS可以通过homebrew安装Git：
+MacOS 可以通过 homebrew 安装 Git：
 
 ```bash
 $ brew install git
 ```
 
-安装完成后，运行下面的指令配置Git，`--global`参数表示这台机器上所有的Git仓库都会使用这个配置，也可以对某个仓库指定不同的用户名和Email地址。
+安装完成后，运行下面的指令配置 Git，`--global`参数表示这台机器上所有的 Git 仓库都会使用这个配置，也可以对某个仓库指定不同的用户名和 Email 地址。
 
 ```bash
 git config --global user.name "Your Name"
@@ -84,15 +85,17 @@ git config --list # 查看配置
 
 ## .gitignore 文件的使用
 
-.gitignore文件用于指定哪些文件或目录不需要被Git跟踪。
+.gitignore 文件用于指定哪些文件或目录不需要被 Git 跟踪。
 
 最佳实践：
-- 在项目开始时就创建.gitignore文件
+
+- 在项目开始时就创建.gitignore 文件
 - 按照项目类型使用合适的模板
 - 定期维护和更新
 - 避免忽略重要的配置文件
 
 常见的忽略规则：
+
 ```bash
 # 编译生成的文件
 *.class
@@ -118,7 +121,7 @@ Thumbs.db
 *.tmp
 ```
 
-## Git常用命令
+## Git 常用命令
 
 ### 添加更改：git add
 
@@ -134,7 +137,8 @@ git add *.js        # 使用通配符，添加所有JavaScript文件
 ### 提交更改：git commit
 
 最佳实践：
-1. 第一行应该是简短的摘要（不超过50个字符），例如，feat: 添加新功能，fix: 修复bug，refactor: 重构代码，style: 调整格式，test: 添加测试，chore: 其他更改
+
+1. 第一行应该是简短的摘要（不超过 50 个字符），例如，feat: 添加新功能，fix: 修复 bug，refactor: 重构代码，style: 调整格式，test: 添加测试，chore: 其他更改
 2. 空一行
 3. 详细的说明（如果需要）
 
@@ -153,12 +157,13 @@ git commit --date="<日期>"    # 指定提交日期，例如："2024-03-14 10:0
 ### 临时保存：git stash
 
 最佳实践：
+
 - 使用有意义的备注
 - 使用`-u`包含未跟踪的文件
 - 使用`-a`包含所有文件（包括被忽略的文件）
-- 切换分支前使用stash保存修改
-- 及时处理或清理stash列表
-- 优先使用pop而不是apply
+- 切换分支前使用 stash 保存修改
+- 及时处理或清理 stash 列表
+- 优先使用 pop 而不是 apply
 
 ```bash
 # 保存修改
@@ -181,15 +186,16 @@ git stash drop            # 删除最新的stash
 git stash clear           # 删除所有stash
 ```
 
-### 撤销更改：git reset, git checkout 
+### 撤销更改：git reset, git checkout
 
 最佳实践：
-- 在feature分支上自由使用reset，在main分支上谨慎使用reset
-- 使用reset整理提交历史
-- 不要在以下情况使用reset：
-   - 已推送到远程的提交
-   - 多人协作的分支
-   - 没有备份的情况下使用--hard
+
+- 在 feature 分支上自由使用 reset，在 main 分支上谨慎使用 reset
+- 使用 reset 整理提交历史
+- 不要在以下情况使用 reset：
+  - 已推送到远程的提交
+  - 多人协作的分支
+  - 没有备份的情况下使用--hard
 
 ```bash
 # 撤销更改
@@ -209,7 +215,7 @@ git checkout <file>
 
 ```bash
 # 查看本地仓库的远程地址
-git remote -vv 
+git remote -vv
 
 # 为本地仓库添加一个远程地址，name一般为origin
 git remote add <name> <url>
@@ -224,6 +230,7 @@ git clone --shallow <url>
 ### 远程推送：git push
 
 最佳实践：
+
 - 经常推送小的改动，避免一次推送大量更改
 - 推送前确保代码已经经过测试
 - 使用有意义的提交信息
@@ -239,9 +246,10 @@ git push --delete <远端别名> <分支名> # 删除远程分支
 ### 远程拉取：git pull
 
 最佳实践
-- 经常进行pull操作，保持代码最新
+
+- 经常进行 pull 操作，保持代码最新
 - 使用`--rebase`保持提交历史整洁
-- 在feature分支开发时定期同步主分支
+- 在 feature 分支开发时定期同步主分支
 - 使用`--ff-only`确保安全合并
 
 ```bash
@@ -257,12 +265,14 @@ git pull --verbose                   # 显示详细信息
 ```
 
 git pull 实际上是两个命令的组合：
+
 1. `git fetch`: 从远程获取最新代码
 2. `git merge/rebase`: 将获取的代码合并到本地
 
 ### 分支管理：git branch, git switch
 
 最佳实践：
+
 - 保持主分支稳定，只合并已测试的代码
 - 功能开发在特性分支进行
 - 定期同步主分支到特性分支
@@ -270,10 +280,11 @@ git pull 实际上是两个命令的组合：
 - 为每个分支设置上游分支，以便确认当前分支和上游分支的关系
 
 分支命名建议：
-- feature/* : 新功能分支
-- bugfix/* : 问题修复分支
-- hotfix/* : 紧急修复分支
-- release/* : 发布分支
+
+- feature/\* : 新功能分支
+- bugfix/\* : 问题修复分支
+- hotfix/\* : 紧急修复分支
+- release/\* : 发布分支
 - dev : 开发分支
 - main/master : 主分支
 
@@ -304,15 +315,17 @@ git branch --set-upstream-to=origin/remote-branch-name
 git push -u origin remote-branch-name
 ```
 
-### 合并分支：git merge, git rebase 
+### 合并分支：git merge, git rebase
 
 merge 和 rebase 的区别：
-1. merge方式（默认）
+
+1. merge 方式（默认）
+
    - 创建一个新的合并提交
    - 保留完整的提交历史
    - 分支历史呈现分叉结构
 
-2. rebase方式
+2. rebase 方式
    - 将本地提交移动到远程分支的最新提交之后
    - 产生线性的提交历史
    - 更清晰的版本演进线图
@@ -338,9 +351,10 @@ git merge --continue
 ### 历史管理：git log, git checkout
 
 最佳实践：
-- 定期使用git log检查项目历史
-- 使用合适的format选项优化log输出
-- 使用git checkout在不同的commit之间进行跳转，本质上是将HEAD指向特定的commit
+
+- 定期使用 git log 检查项目历史
+- 使用合适的 format 选项优化 log 输出
+- 使用 git checkout 在不同的 commit 之间进行跳转，本质上是将 HEAD 指向特定的 commit
 
 ```bash
 git log                   # 查看提交历史
@@ -361,6 +375,7 @@ git checkout <commit id>  # 跳转到之前的commit
 ### 标签管理：git tag
 
 最佳实践：
+
 - 使用语义化版本号（Semantic Versioning）
 - 为重要的发布创建标签
 - 及时推送标签到远程
@@ -405,15 +420,16 @@ git bisect
 语义化版本控制（Semantic Versioning）是一种版本命名规范，根据规范，版本号由三个部分组成：主版本号（MAJOR）、次版本号（MINOR）和修订号（PATCH）。
 
 根据变更类型，递增版本号的规则如下：
-1. 当进行不兼容的API更改时，递增主版本号（MAJOR）
+
+1. 当进行不兼容的 API 更改时，递增主版本号（MAJOR）
 2. 当以向后兼容的方式添加功能时，递增次版本号（MINOR）
 3. 当进行向后兼容的错误修复时，递增修订号（PATCH）
-4. 预发布版本和Meta-data可以作为附加标签（Labels）添加到主版本号、次版本号和修订号的后面
+4. 预发布版本和 Meta-data 可以作为附加标签（Labels）添加到主版本号、次版本号和修订号的后面
 
 > MAJOR.MINOR.PATCH-Labels
-{: .prompt-info }
+> {: .prompt-info }
 
-### Commit规范
+### Commit 规范
 
 [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0/)
 
@@ -425,10 +441,12 @@ git bisect
 [optional footer(s)]
 ```
 
-每次提交的Commit都应该符合上面的格式：
+每次提交的 Commit 都应该符合上面的格式：
+
 1. 类型（type）：
+
    - feat: 新功能
-   - fix: 修复bug
+   - fix: 修复 bug
    - refactor: 重构代码
    - style: 调整格式，不影响代码逻辑的更改（例如空格、格式化、删除日志）
    - chore: 其他更改
@@ -440,12 +458,14 @@ git bisect
    - revert: 回滚到之前的提交
 
 2. 作用域（scope）：
+
    - 可选，用于说明本次提交的影响范围，例如：文件名、文件夹名、模块名、组件名、类名
 
 3. 描述（description）：
+
    - 简短描述本次提交的内容
    - 开头的第一个词尽量从下面选取：Create、Modify、Add、Fix、Refactor、Release、Document、Update、Remove、Delete
-   - 首字母大写，语言精简，少于50个单词，使用动词原型
+   - 首字母大写，语言精简，少于 50 个单词，使用动词原型
 
 4. 主体（body）：
    - 可选，用于提供更详细的描述
@@ -455,7 +475,7 @@ git bisect
 
 参考[HowToContribute](https://github.com/easzlab/kubeasz/blob/master/docs/mixes/HowToContribute.md)
 
-首先请核对下本地git config配置的用户名和邮箱与你github上的注册用户和邮箱一致，否则即使pull request被接受，贡献者列表中也看不到自己的名字，设置命令：
+首先请核对下本地 git config 配置的用户名和邮箱与你 github 上的注册用户和邮箱一致，否则即使 pull request 被接受，贡献者列表中也看不到自己的名字，设置命令：
 
 ```bash
 $ git config --global user.email "you@example.com"
@@ -463,13 +483,14 @@ $ git config --global user.name "Your Name"
 ```
 
 具体步骤：
+
 1. 登录 github，在本项目页面点击 fork 到自己仓库
 2. clone 自己的仓库到本地：git clone https://github.com/xxx/kubeasz.git
 3. 在 master 分支添加原始仓库为上游分支：git remote add upstream https://github.com/easzlab/kubeasz.git
 4. 在本地新建开发分支：git checkout -b dev
-5. 在开发分支修改代码并提交：git add ., git commit -am 'xx变更说明'
+5. 在开发分支修改代码并提交：git add ., git commit -am 'xx 变更说明'
 6. 切换至 master 分支，同步原始仓库：git checkout master， git pull upstream master
 7. 切换至 dev 分支，合并本地 master 分支（确保开发分支包含原始仓库的最新更改），可能需要解冲突：git checkout dev, git merge master
 8. 提交本地 dev 分支到自己的远程 dev 仓库：git push origin dev
-9. 在github自己仓库页面，点击Compare & pull request给原始仓库发 pull request 请求
+9. 在 github 自己仓库页面，点击 Compare & pull request 给原始仓库发 pull request 请求
 10. 等待原作者回复（接受/拒绝）
