--- a/_posts/2025-03-15-一文看懂Shell.md
+++ b/_posts/2025-03-15-一文看懂Shell.md
@@ -6,16 +6,18 @@ tags: [shell, bash, MIT, updating, Linux, 一文看懂]
 ---
 
 ## 1. 基础概念
-Shell是一个命令行解释器，它允许你运行程序、提供输入，并以半结构化的方式查看输出。几乎所有的计算机操作系统都以某种形式提供了Shell，目前最广泛使用的Shell是Bourne Again SHell，简称BASH。
+
+Shell 是一个命令行解释器，它允许你运行程序、提供输入，并以半结构化的方式查看输出。几乎所有的计算机操作系统都以某种形式提供了 Shell，目前最广泛使用的 Shell 是 Bourne Again SHell，简称 BASH。
 
 ```bash
 missing:~$ date
 Fri 10 Jan 2020 11:49:31 AM EST
 ```
 
-上面是BASH的主要文本界面。它告诉你当前所在的计算机是 missing，而当前工作目录（即目前所在的位置）是`~`（表示“home”目录的缩写）。`$`符号表示你不是root用户（root用户用`#`符号表示）。在这个提示符下，你可以输入命令`date`，Shell会对其进行解释并执行。
+上面是 BASH 的主要文本界面。它告诉你当前所在的计算机是 missing，而当前工作目录（即目前所在的位置）是`~`（表示“home”目录的缩写）。`$`符号表示你不是 root 用户（root 用户用`#`符号表示）。在这个提示符下，你可以输入命令`date`，Shell 会对其进行解释并执行。
 
-### Shell基本命令与操作
+### Shell 基本命令与操作
+
 ### 文件操作命令
 
 - `ls`：列出目录内容，`ls -l` 列出详细信息，`ls -a` 列出隐藏文件
@@ -29,7 +31,7 @@ Fri 10 Jan 2020 11:49:31 AM EST
 - `cat`：显示文件内容，`cat -n` 显示行号
 - `grep`：搜索文件内容，`grep -r` 搜索目录及其内容
 - `find`：查找文件，`find -name` 查找文件名，`find -type` 查找文件类型
-- `chmod`：修改文件权限，`chmod 755` 设置文件权限为755
+- `chmod`：修改文件权限，`chmod 755` 设置文件权限为 755
 - `chown`：修改文件所有者，`chown newuser:newgroup` 修改文件所有者和所属组
 - `tar`：压缩和解压文件，`tar -czvf` 压缩文件，`tar -xzvf` 解压文件
 
@@ -39,6 +41,7 @@ Fri 10 Jan 2020 11:49:31 AM EST
 - `kill`：终止进程
 - `killall`：终止指定名称的所有进程
 - `top`：显示系统进程状态
+
 | 命令    | 功能描述              | 常用参数示例           |
 | ------- | --------------------- | ---------------------- |
 | `cd`    | 切换目录              | `cd ~/projects`        |
@@ -55,6 +58,7 @@ Fri 10 Jan 2020 11:49:31 AM EST
 | `tee`   | 创建空文件/更新时间戳 | `touch newfile`        |
 
 ### 常用工具
+
 1. `grep`：文本内容检索，用于搜索匹配的行，支持基本正则(grep) 和扩展正则 (grep -E)
 2. `sed`：基于行的文本编辑器，用于替换、删除、插入文本，支持基本正则（-E）
 3. `awk`：基于列的文本分析工具，支持正则匹配，用于数据筛选、统计等
@@ -65,12 +69,13 @@ Fri 10 Jan 2020 11:49:31 AM EST
 8. `sort`：排序
 9. `uniq`：清除重复数据，需要在排序后使用
 10. `paste`：将多行输入数据拼接成单行（-s），并用特定的分隔符分割（-d,）
-11. `bc`：命令行计算器，支持文本输入（使用echo等）
+11. `bc`：命令行计算器，支持文本输入（使用 echo 等）
 12. `xargs`：将多行文本转换成后续命令的输入参数，在查找文件并进行后续操作时非常有用。
 13. `ffmpeg`：对图像和视频数据进行处理
 14. `head`, `tail`：显示输入数据的首/尾数据，可指定显示的行数（-n10）
 
 ### 输入输出重定向
+
 ```bash
 # 标准输出重定向
 ls > output.txt    # 覆盖写入
@@ -85,11 +90,14 @@ echo < input.txt
 ```
 
 ### 通配符（Globbing）
+
 通配符用于匹配文件名或路径，常用于 ls、cp、mv、rm 等命令中，这些通配符在 bash 脚本和命令行中都很常用，可以结合 grep、find、sed 等工具提高效率。主要的通配符有：
+
 1. `*` 匹配任意数量的字符（包括空字符）
 2. `?` 仅匹配一个任意字符（但不能是空）
 3. `[]` 只匹配`[]`内的一个字符，`[^]`表示匹配**非**括号内的字符。
 4. `{}` 用逗号分隔多个模式，匹配其中任何一个（Bash 扩展）。
+
 ```bash
 ls *.txt  # 匹配所有 .txt 结尾的文件
 ls a*     # 匹配所有以 "a" 开头的文件
@@ -101,14 +109,16 @@ mv {file1,file2}.txt backup/  # 移动 file1.txt 和 file2.txt 到 backup/
 ```
 
 ### 扩展通配符 extglob, globstar
-extglob是Bash的一个可选特性，默认是关闭的。启用后，支持更强大的通配符匹配（类正则匹配）：
-| 模式       | 作用                             |
-| ---------- | -------------------------------- |
-| ?(pattern) | 匹配 0 或 1 次 pattern           |
-| *(pattern) | 匹配 0 或 多次 pattern           |
-| +(pattern) | 匹配 1 次 或 多次 pattern        |
-| @(pattern) | 匹配 1 次 pattern（类似 {}）     |
-| !(pattern) | 匹配非 pattern（相当于反向匹配） |
+
+extglob 是 Bash 的一个可选特性，默认是关闭的。启用后，支持更强大的通配符匹配（类正则匹配）：
+
+| 模式        | 作用                             |
+| ----------- | -------------------------------- |
+| ?(pattern)  | 匹配 0 或 1 次 pattern           |
+| \*(pattern) | 匹配 0 或 多次 pattern           |
+| +(pattern)  | 匹配 1 次 或 多次 pattern        |
+| @(pattern)  | 匹配 1 次 pattern（类似 {}）     |
+| !(pattern)  | 匹配非 pattern（相当于反向匹配） |
 
 ```bash
 shopt -s extglob  # 开启扩展通配符
@@ -121,14 +131,15 @@ ls file@(1|2).txt  # 只匹配 file1.txt 或 file2.txt
 ls !(*.txt)       # 列出非 .txt 文件
 ```
 
-globstar也是Bash的一个可选特性，启用后，通配符`**`可以匹配递归的目录（包括子目录中的所有文件）。默认情况下，`**`只能匹配当前目录。
+globstar 也是 Bash 的一个可选特性，启用后，通配符`**`可以匹配递归的目录（包括子目录中的所有文件）。默认情况下，`**`只能匹配当前目录。
 
 ```bash
 shopt -s globstar # 启用 globstar
 ls **/*.txt  # 列出所有子目录中的 .txt 文件
 ```
 
-结合上面提到的通配符（globbing）和常用工具如grep、find、sed等可以大大提高日常工作效率。
+结合上面提到的通配符（globbing）和常用工具如 grep、find、sed 等可以大大提高日常工作效率。
+
 ```bash
 # 结合 rm 进行文件删除
 rm -v !(*.c|*.h)     # 删除所有非 `.c` 或 `.h` 结尾的文件
@@ -157,6 +168,7 @@ grep "ERROR" *.log | awk '{count++} END {print "Total Errors:", count}'
 ```
 
 ### 正则表达式
+
 ```bash
 grep '^[A-Z]' file.txt      # 以大写字母开头的行
 grep "gr[ae]y" file.txt     # 匹配 "gray" 或 "grey"的行
@@ -178,6 +190,7 @@ egrep "error|warning" file.txt  # 查找 "error" 或 "warning"
 ```
 
 ### 管道 piping
+
 ```bash
 # 基本管道
 ls -l | grep ".txt"
@@ -192,6 +205,7 @@ cat < mypipe
 ```
 
 ### 进程管理
+
 ```bash
 # 后台运行
 long_process &
@@ -208,12 +222,14 @@ trap 'cleanup' SIGINT   # 捕获 Ctrl+C
 timeout 5s slow_command
 ```
 
-## 2. 脚本编程Script
+## 2. 脚本编程 Script
 
 ### Cheatsheet
+
 ![bash-script](https://pbs.twimg.com/media/GdYNK4zXQAExzFQ?format=jpg&name=4096x4096)
 
 ### 变量操作
+
 ```bash
 name="John"  # 变量定义
 echo $name   # 变量使用
@@ -221,11 +237,13 @@ echo $name   # 变量使用
 # 环境变量
 export PATH="$PATH:/my/custom/path"
 ```
+
 一些常见的特殊变量：
-1. `$$` 当前进程ID
-2. `$?` 上条命令退出码，0为成功，1为失败
+
+1. `$$` 当前进程 ID
+2. `$?` 上条命令退出码，0 为成功，1 为失败
 3. `$0` 脚本名称
-4. `$1` ~ `$9` 脚本的9个输入参数
+4. `$1` ~ `$9` 脚本的 9 个输入参数
 5. `$#` 参数数量
 6. `$@` 所有参数的集合，一般用于遍历
 7. `$_` 上条命令的最后一个参数
@@ -239,6 +257,7 @@ echo "we are in $(pwd)"
 ```
 
 ### 条件判断
+
 ```bash
 # 数值比较
 if [ "$a" -gt "$b" ]; then
@@ -262,6 +281,7 @@ fi
 ```
 
 ### 循环结构
+
 ```bash
 # For 循环
 for i in {1..5}; do
@@ -282,6 +302,7 @@ done
 ```
 
 ### 函数定义
+
 ```bash
 # 简单函数
 greet() {
@@ -301,7 +322,7 @@ echo "Random number: $?"
 
 ### shebang #!
 
-在文件的首行可以定义shebang语句，用于告诉Shell如何执行这个文件。例如，我们想要执行下面的Python脚本：
+在文件的首行可以定义 shebang 语句，用于告诉 Shell 如何执行这个文件。例如，我们想要执行下面的 Python 脚本：
 
 ```python
 #!/usr/local/bin/python
@@ -311,7 +332,7 @@ for arg in reversed(sys.argv[1:]):
     print(arg)
 ```
 
-我们可以使用下面两种方式来运行test.py文件：
+我们可以使用下面两种方式来运行 test.py 文件：
 
 ```bash
 # 不使用shebang语句
@@ -320,6 +341,7 @@ python ./test.py a b c
 # 使用shebang语句
 ./test.py a b c
 ```
+
 ## 3. CLI 开发环境
 
 ### job control
@@ -341,13 +363,13 @@ kill -KILL %1
 
 ### dotfile
 
-CLI使用dotfile来对其进行配置，可以把配置文件集中保存，通过git进行管理，然后连接(symlink)到home目录下。
+CLI 使用 dotfile 来对其进行配置，可以把配置文件集中保存，通过 git 进行管理，然后连接(symlink)到 home 目录下。
 
 ```bash
 ln -s path/to/file sysmlink
 ```
 
-相比于直接读man文档，更好的学习方法是在GitHub中搜索dotfiles，然后从其他人分享的配置文件中学习。
+相比于直接读 man 文档，更好的学习方法是在 GitHub 中搜索 dotfiles，然后从其他人分享的配置文件中学习。
 
 ## 4. 现代工具链
 
@@ -362,7 +384,6 @@ ln -s path/to/file sysmlink
 | man      | tldr        | 简化版命令手册           |
 | grep     | fzf         | 可交互式搜索             |
 
-
 ```bash
 # 搜索scratch文件夹下导入requests库的py文件，并且输出检索结果的上下5行作为上下文。
 rg "import requests" -t py -C 5 ~/scratch
@@ -372,32 +393,33 @@ rg -u --files-without-match "^#\!" -t sh
 ```
 
 实用工具：
+
 1. `zsh-history-substring-search`：历史命令动态补全，目前还没有配置成功。
 2. `broot`：可交互式快速查找文件并打开
 3. `tmux`：多终端窗口管理工具
 
-## 5. 最佳实践 
+## 5. 最佳实践
 
 1. 使用版本控制管理配置文件`~/.bashrc`, `~/.zshrc`
 2. 为常用操作创建别名`alias ll="ls -lah"`
 3. 保持命令可读性（合理换行）
 4. 环境变量：`PATH`, `HOME`, `EDITOR` 等
-5. 使用shellcheck查看脚本是否有语法错误
+5. 使用 shellcheck 查看脚本是否有语法错误
 6. 检验正则表达式是否正确的小技巧：利用一些便捷的网络工具
 
 ### 常用快捷键
 
-| 快捷键   | 功能                     |
-| -------- | ------------------------ |
-| Ctrl+C   | 中断当前运行的程序       |
-| Ctrl+D   | 退出当前shell或输入EOF   |
-| Ctrl+Z   | 将当前程序放到后台运行   |
-| Ctrl + A | 将光标移动到行首         |
-| Ctrl + E | 将光标移动到行尾         |
-| Ctrl + U | 删除光标前的所有内容     |
-| Ctrl + K | 删除光标后的所有内容     |
-| Ctrl + W | 删除光标前的一个单词     |
-| Ctrl + R | 搜索历史命令             |
-| Ctrl+G   | 退出历史命令搜索模式     |
-| Ctrl+L   | 清屏，相当于clear命令    |
-| Alt + .  | 插入上条命令最后一个参数 |
+| 快捷键   | 功能                      |
+| -------- | ------------------------- |
+| Ctrl+C   | 中断当前运行的程序        |
+| Ctrl+D   | 退出当前 shell 或输入 EOF |
+| Ctrl+Z   | 将当前程序放到后台运行    |
+| Ctrl + A | 将光标移动到行首          |
+| Ctrl + E | 将光标移动到行尾          |
+| Ctrl + U | 删除光标前的所有内容      |
+| Ctrl + K | 删除光标后的所有内容      |
+| Ctrl + W | 删除光标前的一个单词      |
+| Ctrl + R | 搜索历史命令              |
+| Ctrl+G   | 退出历史命令搜索模式      |
+| Ctrl+L   | 清屏，相当于 clear 命令   |
+| Alt + .  | 插入上条命令最后一个参数  |
