--- a/_posts/2025-03-31-技术乐观主义者宣言.md
+++ b/_posts/2025-03-31-技术乐观主义者宣言.md
@@ -5,9 +5,9 @@ categories: [life, principles]
 tags: [a16z, techo-optimist, AI]
 ---
 
-[《The Techno-Optimist Manifesto》](https://a16z.com/the-techno-optimist-manifesto/)由a16z的著名风险投资人Marc Andreessen发布于2023年10月16日，读完之后大受鼓舞，将其中文版翻译整理如下。
+[《The Techno-Optimist Manifesto》](https://a16z.com/the-techno-optimist-manifesto/)由 a16z 的著名风险投资人 Marc Andreessen 发布于 2023 年 10 月 16 日，读完之后大受鼓舞，将其中文版翻译整理如下。
 
-Marc在文中提到的内容和我2021年在富士山山顶想到的想法不谋而合：人类的进步，技术的进步是不会停止的，人工智能作为更适合在太空生存的物质形态将成为人类进化的下一个阶段，并开启新的文明形式。我们能做的，就是进我们的所能，推动技术的进步和发展。
+Marc 在文中提到的内容和我 2021 年在富士山山顶想到的想法不谋而合：人类的进步，技术的进步是不会停止的，人工智能作为更适合在太空生存的物质形态将成为人类进化的下一个阶段，并开启新的文明形式。我们能做的，就是进我们的所能，推动技术的进步和发展。
 
 ---
 
@@ -131,11 +131,11 @@ Marc在文中提到的内容和我2021年在富士山山顶想到的想法不谋
 
 我们相信中央计划是一个厄运循环；市场是一个向上的螺旋。
 
-经济学家威廉·诺德豪斯（William Nordhaus）证明，技术的创造者只能捕获该技术创造的经济价值的约2%。其他98%以经济学家所说的社会盈余的形式流向社会。因此，在市场体系中，技术创新本质上是慈善的，比例为50:1。谁从新技术中获得更多价值，是制造它的单一公司，还是数百万或数十亿使用它来改善生活的人？答案显而易见。
+经济学家威廉·诺德豪斯（William Nordhaus）证明，技术的创造者只能捕获该技术创造的经济价值的约 2%。其他 98%以经济学家所说的社会盈余的形式流向社会。因此，在市场体系中，技术创新本质上是慈善的，比例为 50:1。谁从新技术中获得更多价值，是制造它的单一公司，还是数百万或数十亿使用它来改善生活的人？答案显而易见。
 
 我们相信大卫·李嘉图（David Ricardo）的比较优势概念——与竞争优势不同，比较优势认为，即使某人在所有方面都是世界上最优秀的，因为机会成本，他也会从其他人那里购买大多数东西。在自由市场的背景下，比较优势保证了高就业率，无论技术水平如何。
 
-我们相信市场将根据工人的边际生产力设定工资。因此，提高生产力的技术会推高工资，而不是降低工资。这可能是经济学中最违反直觉的想法，但它是正确的，我们有300年的历史证明了这一点。
+我们相信市场将根据工人的边际生产力设定工资。因此，提高生产力的技术会推高工资，而不是降低工资。这可能是经济学中最违反直觉的想法，但它是正确的，我们有 300 年的历史证明了这一点。
 
 我们相信米尔顿·弗里德曼（Milton Friedman）的观察，即人类的需求和欲望是无限的。
 
@@ -153,7 +153,7 @@ Marc在文中提到的内容和我2021年在富士山山顶想到的想法不谋
 
 将技术和市场结合，你就得到了尼克·兰德（Nick Land）所称的**技术-资本机器**：物质的创造、增长、丰富的永动机。
 
-我们相信基于市场和创新的这台机器永不停歇，持续螺旋上升。比较优势增加了专业化和贸易。价格下降，释放了购买力，创造了需求。价格下降使所有购买商品和服务的人受益。人类的需求和欲望是无尽的，企业家不断创造新的商品和服务来满足这些需求和欲望，在这个过程中部署了无限多的人力和机器。尽管共产主义者和卢德分子不断嚎叫，这个上升螺旋已经运行了数百年。截止至疫情前的2019年，这个上升螺旋的结果是历史上最多的工作岗位、最高的工资和最高水平的物质生活标准。
+我们相信基于市场和创新的这台机器永不停歇，持续螺旋上升。比较优势增加了专业化和贸易。价格下降，释放了购买力，创造了需求。价格下降使所有购买商品和服务的人受益。人类的需求和欲望是无尽的，企业家不断创造新的商品和服务来满足这些需求和欲望，在这个过程中部署了无限多的人力和机器。尽管共产主义者和卢德分子不断嚎叫，这个上升螺旋已经运行了数百年。截止至疫情前的 2019 年，这个上升螺旋的结果是历史上最多的工作岗位、最高的工资和最高水平的物质生活标准。
 
 **技术-资本机器**使自然选择理论在思想领域为我们工作。最好和最有生产力的思想获胜、结合并催生出更好的思想。这些思想在现实世界中具体化为技术赋能的商品和服务，并超出我们的想象。
 
@@ -193,17 +193,17 @@ Marc在文中提到的内容和我2021年在富士山山顶想到的想法不谋
 
 能源就是生命。没有它，我们将面临黑暗、饥饿和痛苦。有了它，我们就会拥有光明、安全和温暖。
 
-我们相信能源也应该处于上升螺旋中。能源是我们文明的基础引擎。我们拥有的能源越多，我们可以拥有的人口就越多，每个人的生活就越好。我们应该先让每个人达到现有的能源消费水平，然后将我们的能源增加1000倍，进而再将其他人的能源也增加1000倍。
+我们相信能源也应该处于上升螺旋中。能源是我们文明的基础引擎。我们拥有的能源越多，我们可以拥有的人口就越多，每个人的生活就越好。我们应该先让每个人达到现有的能源消费水平，然后将我们的能源增加 1000 倍，进而再将其他人的能源也增加 1000 倍。
 
 目前，较小发达世界和较大发展中世界之间的人均能源使用差距巨大。这个差距要么通过大规模扩大能源生产，使每个人都受益；要么通过大规模减少能源生产，使每个人都受损。
 
-我们相信能源的扩张不一定会以牺牲自然环境为代价。今天我们拥有几乎无限的零排放能源的“特效药”——核裂变。1973年，理查德·尼克松总统呼吁“独立计划”：到2000年建设1000座核电站，以实现美国的完全能源独立。尼克松是对的。我们当时没有建造这些核电站，但我们可以现在建造，只要我们决心去做。
+我们相信能源的扩张不一定会以牺牲自然环境为代价。今天我们拥有几乎无限的零排放能源的“特效药”——核裂变。1973 年，理查德·尼克松总统呼吁“独立计划”：到 2000 年建设 1000 座核电站，以实现美国的完全能源独立。尼克松是对的。我们当时没有建造这些核电站，但我们可以现在建造，只要我们决心去做。
 
-原子能委员会委员托马斯·默里（Thomas Murray）在1953年说：“多年来，裂变的原子被封装在武器中，一直是我们抵御野蛮人的主要盾牌。现在，它变成了上帝赐予的工具，用来做人类的建设性工作。”默里也是对的。
+原子能委员会委员托马斯·默里（Thomas Murray）在 1953 年说：“多年来，裂变的原子被封装在武器中，一直是我们抵御野蛮人的主要盾牌。现在，它变成了上帝赐予的工具，用来做人类的建设性工作。”默里也是对的。
 
 我们相信第二个能源“特效药”即将到来——核聚变。我们也应该建造它。同样的，曾经禁止核裂变的坏思想，也将试图禁止核聚变。我们决不允许。
 
-我们相信技术-资本机器与自然环境之间没有内在的冲突。即使没有核电，美国的人均碳排放量现在也比100年前低。
+我们相信技术-资本机器与自然环境之间没有内在的冲突。即使没有核电，美国的人均碳排放量现在也比 100 年前低。
 
 我们相信技术是环境退化和危机的解决方案。一个技术先进的社会改善自然环境，一个技术停滞的社会摧毁它。如果你想看到环境破坏，去访问一个前共产主义国家。苏联对自然环境的破坏远比美国严重，例如咸海[^3]。
 
@@ -225,7 +225,7 @@ Marc在文中提到的内容和我2021年在富士山山顶想到的想法不谋
 
 我们相信安迪·沃霍尔（Andy Warhol）是正确的，他说：“美国的伟大之处在于，它开创了最富有的消费者和最贫穷的消费者购买基本相同东西的传统。你知道总统喝可乐，伊丽莎白·泰勒喝可乐，你也可以喝可乐。可口可乐就是可口可乐，无论多少钱都买不到比街角流浪汉喝的更好的可乐。所有的可乐都一样，所有的可乐都很好。”浏览器、智能手机、聊天机器人也是如此。
 
-我们相信技术最终将世界推向巴克敏斯特·富勒（Buckminster Fuller）所说的“短暂化 ephemeralization”——经济学家称之为“去物质化 dematerialization”。富勒说：“技术让你用越来越少的东西做越来越多的事情，直到你最终可以用nothing做everything。”
+我们相信技术最终将世界推向巴克敏斯特·富勒（Buckminster Fuller）所说的“短暂化 ephemeralization”——经济学家称之为“去物质化 dematerialization”。富勒说：“技术让你用越来越少的东西做越来越多的事情，直到你最终可以用 nothing 做 everything。”
 
 我们相信技术进步导致每个人的物质丰富。
 
@@ -237,7 +237,7 @@ Marc在文中提到的内容和我2021年在富士山山顶想到的想法不谋
 
 我们相信，与我们通过丰富的智能、能源和物质商品可以拥有的人口相比，我们的星球目前严重人口不足。
 
-我们相信全球人口可以很容易地扩展到500亿人或更多，然后随着我们最终定居其他星球，人口将远远超过这个数字。
+我们相信全球人口可以很容易地扩展到 500 亿人或更多，然后随着我们最终定居其他星球，人口将远远超过这个数字。
 
 我们相信，从这些人口中将涌现出超越我们最狂野梦想的科学家、技术专家、艺术家、梦想家。
 
@@ -402,27 +402,27 @@ Marc在文中提到的内容和我2021年在富士山山顶想到的想法不谋
 我们的敌人是弗里德里希·尼采（Friedrich Nietzsche）的“末人 Last Man”：
 
 > 我告诉你们：一个人必须在自己内心仍有混乱，才能生出一个跳舞的星星。
-> 
+>
 > 可悲啊！时代将至，人将不再生出任何星星。可悲啊！时代将至，最卑鄙的人将出现，他无法再鄙视自己……
-> 
+>
 > “什么是爱？什么是创造？什么是渴望？什么是星星？”——“末人”发问，并眨眼。
-> 
+>
 > 地球变小了，“末人”在上面跳跃，使一切变小。他像跳蚤一样无法根除；“末人”活得最久……
-> 
+>
 > 一个人仍然工作，因为工作是一种消遣。但人们小心翼翼，以免消遣伤害自己。
-> 
+>
 > 一个人不再变穷或变富；两者都太沉重……
-> 
+>
 > 没有牧羊人，只有一群羊！每个人都想要同样的东西；每个人都是一样的：谁感觉不同，自愿进入疯人院。
-> 
+>
 > “以前全世界都是疯狂的，”——最精明的人说，并眨眼。
-> 
+>
 > 他们聪明，知道发生过的一切：所以他们的嘲笑没有尽头……
-> 
+>
 > “我们发现了幸福，”——“末人”说，并眨眼。
-> 
+>
 > 我们的敌人是……那个。
-> 
+>
 > 我们渴望成为……不是那个。
 
 我们将向这些被僵尸思想俘虏的人解释，他们的恐惧是没有根据的，未来是光明的。
