--- a/_posts/2025-06-01-IOS开发学习资料.md
+++ b/_posts/2025-06-01-IOS开发学习资料.md
@@ -1,15 +1,15 @@
 ---
 title: IOS开发学习资料
 date: 2025-06-01
-categories: [SDE]
+categories: [SWE]
 tags: [IOS, apple]
 ---
 
-从reddit整理的搭建推荐的资料
+从 reddit 整理的搭建推荐的资料
 
 ## 书籍
 
-1. SwiftUI极简开发：得到上能找到的最新书籍，出版于2024年7月1日
+1. SwiftUI 极简开发：得到上能找到的最新书籍，出版于 2024 年 7 月 1 日
 
 ## 课程
 
@@ -17,12 +17,11 @@ tags: [IOS, apple]
 
 ## 网站资源
 
-1. [IOS开源组件](https://iosexample.com)
-2. [IOS开源app](https://github.com/dkhamsing/open-source-ios-apps)
-3. [Swift官方文档](https://docs.swift.org/swift-book/documentation/the-swift-programming-language)
+1. [IOS 开源组件](https://iosexample.com)
+2. [IOS 开源 app](https://github.com/dkhamsing/open-source-ios-apps)
+3. [Swift 官方文档](https://docs.swift.org/swift-book/documentation/the-swift-programming-language)
 4. [苹果开发者官网](https://developer.apple.com)
-5. [IOS开发官方教程](https://developer.apple.com/ios/get-started/)
-
+5. [IOS 开发官方教程](https://developer.apple.com/ios/get-started/)
 
 ## 其他
 
@@ -32,18 +31,18 @@ tags: [IOS, apple]
 
 ## 学习计划
 
-### 从官方推荐的IOS开发资料开始：
+### 从官方推荐的 IOS 开发资料开始：
 
-[IOS开发官方教程](https://developer.apple.com/ios/get-started/)
+[IOS 开发官方教程](https://developer.apple.com/ios/get-started/)
 
 1. Assemble your toolbox:
-    1. Develop in Swift tutorials: 
-        1. SwiftUI foundations
-        2. Explore Xcode
-        3. Data modeling
-        4. Machine learning
-        5. Spatial computing
-    2. Introducing SwiftUI: 4hr 25min Estimated Time
+   1. Develop in Swift tutorials:
+      1. SwiftUI foundations
+      2. Explore Xcode
+      3. Data modeling
+      4. Machine learning
+      5. Spatial computing
+   2. Introducing SwiftUI: 4hr 25min Estimated Time
 2. Dive into design
 3. Adopt best practices
 4. Build for multiple Apple platforms
@@ -51,7 +50,9 @@ tags: [IOS, apple]
 6. Go further
 
 ### cs193p
+
 完成官方推荐的内容之后，再通过[CS193p](https://cs193p.stanford.edu/2023)来进行进阶。
 
 ### 其他资源
-最后通过Swiftful Thinking Youtube Channel的内容进行查漏补缺和进一步提升
+
+最后通过 Swiftful Thinking Youtube Channel 的内容进行查漏补缺和进一步提升
